# Twitter-Location-Analysis

./: .gitignore  pyproject.toml  readme.md
data_scrape/: readme.md  scrape_topic.py
notebooks/: EDA1.ipynb  EDA2.ipynb
util/: data_util.py  readme.md
